syntax = "proto3";

package model;

message Odd {
  string id = 1;
  float odd = 2;
  string source = 3;
  string match_id = 4;
  string outcome = 6;
  string type = 7;
}
